[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Pawn/Actor/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Pawn/Actor/Collectible/Collectible.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

[node name="Collectible" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
disable_physics_process = true
can_land = false

[node name="CollectRange" type="Area" parent="." index="2"]
collision_layer = 3
collision_mask = 3
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="CollectRange" index="0"]
shape = SubResource( 1 )

[connection signal="actor_entered" from="." to="." method="actor_entered"]
[connection signal="character_entered" from="." to="." method="character_entered"]
[connection signal="player_entered" from="." to="." method="player_entered"]
[connection signal="body_entered" from="CollectRange" to="." method="_on_CollectRange_body_entered"]
